syntax = "proto3";

option csharp_namespace = "BLL.Grpc";

package NotificationApi;

service NotificationService {
	rpc Notify(Notification) returns (NotificationResponse) {}
	rpc ConnectPersonToExchange(Connect) returns (NotificationResponse) {}
}

message Notification {
	string exchange_name = 1;
	string value = 2;
}

message Connect {
	string exchange_name = 1;
	int32 person_id = 2;
}

message NotificationResponse {
}